--- a/L01/style.css
+++ b/L01/style.css
@@ -22,7 +22,8 @@ html{
 
 .text-container h1{
     text-align: center;
-    color: #ffffff;
+    color: #000000;
+    font-weight: 900;
     font-size: 55px;
     padding: 25px;
 } 
